--- a/.github/workflows/ecrlogin.yml
+++ b/.github/workflows/ecrlogin.yml
@@ -12,8 +12,10 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-        
+
       - name: Log in to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v1
+        with:
+          region: ap-south-1  # Specify your region here
 
-      # Other steps like building and pushing to ECR can go here
+      # Additional steps can go here, like building and pushing to ECR
